# hr-service

./: .gitignore  LICENSE  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt  streaml.py
auth_service/core/: config.py
auth_service/repository/: auth_repository.py  database.py
auth_service/service/: auth_email_service.py  auth_service.py
docker/: Dockerfile  docker-compose.yaml
hr_service/: bot.py  depends.py  main.py  Чат.py
hr_service/candidate/: candidate_service.py  database.py  tg_service.py
hr_service/core/: config.py
hr_service/frontend_auth/: auth.py
hr_service/pages/: Дашборд.py  Документы.py  Кандидаты.py  Мой профиль.py
hr_service/pgs/: Архив.py  Дашборд.py  Документы.py  Кандидаты.py  Сотрудники.py  Чат.py
hr_service/repository/: bot_repositoty.py  dashboard_repository.py  database.py  strml_repository.py
hr_service/service/: bot_service.py  email_service.py  gemini_service.py  strml_service.py
hr_service/utils/: utils.py
user/: Заказать!.py
user/core/: config.py  httpexceptions.py
user/repository/: database.py  strm_repository.py  tg_repository.py
